--- a/first-dom.html
+++ b/first-dom.html
@@ -11,6 +11,7 @@
         <h1>hello dom </h1>
     </header>
     <main>
+       <section>
         <h1>name of my friends</h1>
         <ul>
             <li>shakib</li>
@@ -19,6 +20,28 @@
             <li>ASHIK</li>
             <li>MAHDI</li>
         </ul>
+       </section>
+
+       <section>
+        <h1>fruits of my favourite</h1>
+
+        <ul>
+            <li class="fruits">mango</li>
+            <li class="fruits">apple</li>
+            <li class="fruits">banana</li>
+            <li>orange</li>
+        </ul>
+       </section>
+
+       <section>
+        <h1>this place that i like visite</h1>
+        <ul >
+            <li class="places">comilla</li>
+            <li class="places">shylhet</li>
+            <li class="places">chittogong</li>
+            <li class="places" >dhaka</li>
+        </ul>
+       </section>
     </main>
     <script src="first-dom.js"></script>
 </body>
