create , appandchild, innerText, and classlist add remove mathod leanig done

--- a/first-dom.html
+++ b/first-dom.html
@@ -10,10 +10,10 @@
     <header>
         <h1>hello dom </h1>
     </header>
-    <main>
+    <main id="main-01">
        <section>
-        <h1>name of my friends</h1>
-        <ul>
+        <h1 id="sha">name of my friends</h1>
+        <ul id="items-name">
             <li>shakib</li>
             <li>RAKIB</li>
             <li>shakib</li>
@@ -22,8 +22,8 @@
         </ul>
        </section>
 
-       <section>
-        <h1>fruits of my favourite</h1>
+       <section class="section3">
+        <h1 id="fru">fruits of my favourite</h1>
 
         <ul>
             <li class="fruits">mango</li>
@@ -34,7 +34,7 @@
        </section>
 
        <section>
-        <h1>this place that i like visite</h1>
+        <h1 class="like-place">this place that i like visite</h1>
         <ul >
             <li class="places">comilla</li>
             <li class="places">shylhet</li>
