--- a/first-dom.html
+++ b/first-dom.html
@@ -1,48 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>welcome to dom</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <h1>hello dom </h1>
+      <h1>hello dom</h1>
     </header>
     <main id="main-01">
-       <section>
+      <section>
         <h1 id="sha">name of my friends</h1>
         <ul id="items-name">
-            <li>shakib</li>
-            <li>RAKIB</li>
-            <li>shakib</li>
-            <li>ASHIK</li>
-            <li>MAHDI</li>
+          <li>shakib</li>
+          <li>RAKIB</li>
+          <li>shakib</li>
+          <li>ASHIK</li>
+          <li>MAHDI</li>
         </ul>
-       </section>
+      </section>
 
-       <section class="section3">
+      <section class="section3">
         <h1 id="fru">fruits of my favourite</h1>
 
         <ul>
-            <li class="fruits">mango</li>
-            <li class="fruits">apple</li>
-            <li class="fruits">banana</li>
-            <li>orange</li>
+          <li class="fruits">mango</li>
+          <li class="fruits">apple</li>
+          <li class="fruits">banana</li>
+          <li>orange</li>
         </ul>
-       </section>
+      </section>
 
-       <section>
-        <h1 class="like-place">this place that i like visite</h1>
-        <ul >
-            <li class="places">comilla</li>
-            <li class="places">shylhet</li>
-            <li class="places">chittogong</li>
-            <li class="places" >dhaka</li>
+      <section id="list">
+        <h1>this place that i like visite</h1>
+        <ul>
+          <li>comilla</li>
+          <li>shylhet</li>
+          <li class="places">chittogong</li>
+          <li>dhaka</li>
         </ul>
-       </section>
+      </section>
+
+      <ul class="unorder-list">
+        <li>child1</li>
+        <li>child2</li>
+        <li class="current">child3</li>
+        <li>child4</li>
+        <li>child5</li>
+      </ul>
     </main>
     <script src="first-dom.js"></script>
-</body>
+  </body>
 </html>
